# interactive-demos

./: .gitignore  .prettierrc  CMakeLists.txt  CMakePresets.json  README.md  astro.config.mjs  breadthfirstsearch.js  index.html  package-lock.json  package.json  sugar.js  tsconfig.json
.github/workflows/: main.yml
_astro/: BreadthFirstSearch.9tbeAmH8.js  BreadthFirstSearch.BfTGsQQK.js  BreadthFirstSearch.C-x1MNT-.js  BreadthFirstSearch.C551donI.js  BreadthFirstSearch.CRiauPKy.js  BreadthFirstSearch.CTy2WNnt.js  BreadthFirstSearch.Cb5CBTp0.js  BreadthFirstSearch.CiXiRL0o.js  BreadthFirstSearch.CjPQqKIE.js  BreadthFirstSearch.CvKCeSR-.js  BreadthFirstSearch.DAau75yX.js  BreadthFirstSearch.DJKDm99R.js  BreadthFirstSearch.DP1dpS8q.js  BreadthFirstSearch.DkWduLE-.js  BreadthFirstSearch.MPQkB5Ch.js  BreadthFirstSearch.fzffiZ5V.js  BreadthFirstSearch.xZd_6CY8.js  Chess.-LXOmPYM.js  Chess.BBNVxEwX.js  Chess.CFVQhhx3.js  Chess.CRzVXCPH.js  Chess.Cr97txl9.js  Chess.DR0KKW_7.js  Chess.DV952jbt.js  Chess.DxUE1ROy.js  Chess.JbCgQGkz.js  DungeonGenerator.6dRr5Msc.js  DungeonGenerator.BBY2fC-q.js  DungeonGenerator.BBnEMTm7.js  DungeonGenerator.BsPiPQh_.js  DungeonGenerator.CPjXqJu6.js  DungeonGenerator.CkWqSNWn.js  DungeonGenerator.Cki1xe4B.js  DungeonGenerator.D-6-wOgK.js  DungeonGenerator.DWoO_4Cz.js  DungeonGenerator.Dks0pONZ.js  DungeonGenerator.jjRb6pYM.js  DungeonGenerator.pyWseKHX.js  JohnConwayLife.B4CTbKGC.js  JohnConwayLife.B9fcYQVT.js  (+148 more)
assignments/: bindings.cpp  breadthfirst_search.h  grid_location.h  square_grid.h
breadthfirstsearch/: index.html
chess/: index.html
components/: drag-handle.js
demos/: bindings.cpp
demos/chess/: bitboard.h  board.h  chess.cpp  chess.h  consts.h  fen.h  piece.h  wrap_chess.cpp  zobrist.h
demos/datastructures/: finite_grid.h  grid_location.h  grid_world.h
demos/dungeon/: dungeon.cpp  dungeon.h  wrap_dungeon.cpp
demos/life/: life.cpp  life.h  wrap_life.cpp
demos/mazegenerator/: maze.cpp  maze.h  wrap_maze.cpp
demos/minesweeper/: minesweeper.cpp  minesweeper.h  wrap_minesweeper.cpp
demos/pathfinding/: astar_search.cpp  breadth_first_search.cpp  dijkstra_search.cpp  greedy_search.cpp  greedy_search.h  pathfinding.h  wrap_pathfinding.cpp
demos/tictactoe/: bot.h  tictactoe.cpp  tictactoe.h  wrap_tictactoe.cpp
demos/towerdefense/: astar_search.h  breadth_first_search.h  dijkstra_search.h  greedy_search.h  typedefs.h  wrap_towerdefense.cpp
dungeongerator/: index.html
johnconwaylife/: index.html
mazegenerator/: index.html
minesweeper/: index.html
modules/: demos.js
pathfinding/: index.html
public/: minesweeper.js  tictactoe.js
public/components/: drag-handle.js  grid-world.js
resources/: build.ts
resources/content/: environment.md  index.md  towerdefense.html
resources/mustache/: meta.mustache
src/: consts.ts
src/components/: BreadthFirstSearch.vue  DungeonGenerator.vue  JohnConwayLife.vue  Meta.astro  Minesweeper.astro  Minesweeper.vue  TicTacToe.vue
src/composables/: useTimer.ts  wasm.ts
src/demos/: BreadthFirstSearch.vue  Chess.vue  DungeonGenerator.vue  JohnConwayLife.vue  MazeGenerator.vue  Minesweeper.vue  Pathfinding.vue  TicTacToe.vue
src/integrations/: symlink.ts
src/layouts/: Page.astro
src/pages/: [slug].astro  breadthfirstsearch.astro  chess.astro  dungeongerator.astro  index.astro  johnconwaylife.astro  mazegenerator.astro  minesweeper.astro  pathfinding.astro  tictactoe.astro
tictactoe/: index.html
(+28 files in other folders)
